[project]
name = "analizer-constitution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "ipywidgets>=8.1.7",
    "langchain-openai>=0.3.33",
    "langchain[openai]>=0.3.27",
    "pypdf2>=3.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
