[project]
name = "analizer-constitution"
version = "0.1.0"
description = "Legal assistant for querying Colombian laws using LangChain and multiple LLM providers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.1.0",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.12.0",
    "ipywidgets>=8.1.7",
    "langchain-openai>=0.3.33",
    "langchain[openai]>=0.3.27",
    "langchain-groq>=0.3.0",
    "langchain-ollama>=0.3.0",
    "pypdf2>=3.0.1",
    "beautifulsoup4>=4.14.2",
    "requests>=2.32.5",
    "langchain-community>=0.3.30",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
